fix: :art: fix user search history entity format
